# RtpDrmPlayer

./: CMakeLists.txt  LICENSE  README.md
include/: config.h  display_manager.h  dma_buffers_manager.h  dmabuf_allocator.h  drm_dmabuf_display.h  frame_processor.h  rtp_receiver.h  streaming_manager.h  uvgrtp_receiver.h  v4l2_decoder.h  v4l2_device.h
src/app/: rtp_player.cpp
src/lib/: display_manager.cpp  dma_buffers_manager.cpp  dmabuf_allocator.cpp  drm_dmabuf_display.cpp  frame_processor.cpp  rtp_receiver.cpp  streaming_manager.cpp  uvgrtp_receiver.cpp  v4l2_decoder.cpp  v4l2_device.cpp
